# APPS

./: APPS_Podruhe  Apps_zk  README.md  i2c_help.cpp
apps-labexc/: CMakeLists.txt
apps-labexc/workspace.mcu/.metadata/: version.ini
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.cdt.core/: demo.language.settings.xml  i2c.language.settings.xml  lcd.language.settings.xml
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.cdt.make.core/: leds.sc
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.core.resources/.projects/demo/.indexes/: history.index
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.core.resources/.projects/leds/.indexes/: properties.index
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
apps-labexc/workspace.mcu/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
apps-labexc/workspace.mcu/demo/: .cproject  CMakeLists.txt  demo JLink Debug.launch  demo JLink Release.launch  main-demo.cpp
apps-labexc/workspace.mcu/i2c/: .cproject  i2c JLink Debug.launch  i2c JLink Release.launch  i2c-lib.cpp  i2c-lib.h  main-i2c.cpp  si4735-lib.cpp  si4735-lib.h
apps-labexc/workspace.mcu/lcd/: .cproject  font8x8.cpp  lcd JLink Debug.launch  lcd JLink Release.launch  lcd_lib.cpp  main-lcd.cpp
apps-labexc/workspace.mcu/leds/: .cproject  leds JLink Debug.launch  leds JLink Release.launch  main-leds.cpp
cuda-demo-20181112/cuda1/: CMakeLists.txt  Makefile  cuda1.cu  main1.cpp
cuda-demo-20181112/cuda2_hdm/: Makefile  cuda2_hdm.cu  main2_hdm.cpp
cuda-demo-20181112/cuda2_unm/: Makefile  cuda2_unm.cu  main2_unm.cpp
cuda-demo-20181112/cuda3_hdm/: cuda3_hdm.cu  main3_hdm.cpp
cuda-demo-20181112/cuda3_unm/: cuda3_unm.cu  main3_unm.cpp  pic_type.h  uni_mem_allocator.cpp  uni_mem_allocator.h
cuda-demo-20181112/cuda4_unm/: Makefile  cuda4_unm.cu  main4_unm.cpp  uni_mem_allocator.cpp  uni_mem_allocator.h
cuda-demo-20181112/cuda5_unm/: cuda5_unm.cu  main5_unm.cpp
cuda-demo-20181112/cuda6-ani/: Makefile  animation.h  cuda6_ani.cu  main6_ani.cpp
cv2priprava/: CMakeLists.txt  main.cpp  poznamky.txt
cv3/: main-leds.cpp  sl -l
examples-13/: Makefile  analog.c  analog.h  clock  digital.c  digital.h  geeky.c  geeky.h  main.c
ldc1/: CMakeLists.txt  lcd_lib.h  main.cpp
olivka/: main.cpp
olivka/APPS2/: font36.cpp  font8x8.cpp  main  main.cpp
pismenoClang/: CMakeLists.txt  main.c
pokus_pismeno/: CMakeLists.txt  main.cpp
simulace_displeje/APPS2/: CMakeLists.txt  Makefile  font36.cpp  font8x8.cpp  main  main.cpp  template.cpp
threads-demo/: CMakeLists.txt  threads-demo.cpp
threads0/: CMakeLists.txt  main.cpp
threadsZake/: CMakeLists.txt  main.cpp
tmp/: CMakeLists.txt  main.cpp
tom_apps/: ledPanel.cpp  ledPanel.h  main-leds.cpp
